# y

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/y/: y.py
src/yproject/: __init__.py
tests/: test.py
