[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yproject"
version = "1.0.2"
description = "Pipes for humans."
readme = "README.md"
authors = [
    {name = "Ben Karcher", email = "s6bkarc@uni-bonn.de"},
    {name = "", email = "wbrandon@csail.mit.edu"},
    {name = "", email = "bdrisc@cs.stanford.edu"},
    {name = "", email = "fydai@berkeley.edu"},
    {name = "Lukas Sabatschus", email = "lus@wallpen.com"},
    {name = "Ethan Smith", email = "ethan@python.org"},
]

[project.urls]
Homepage = "https://y-project.dev"
Issues = "https://github.com/the-y-project/y/issues"